Changed atk-text-center back to atk-align-center.

--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -9,18 +9,18 @@ section#components
   #example-swatches.atk-box
     .atk-row.atk-push-small
       .atk-col-4
-        .atk-swatch-ink.atk-box-small.atk-text-center .atk-swatch-ink
+        .atk-swatch-ink.atk-box-small.atk-align-center .atk-swatch-ink
       .atk-col-4
-        .atk-swatch-blue.atk-box-small.atk-text-center .atk-swatch-blue
+        .atk-swatch-blue.atk-box-small.atk-align-center .atk-swatch-blue
       .atk-col-4
-        .atk-swatch-green.atk-box-small.atk-text-center .atk-swatch-green
+        .atk-swatch-green.atk-box-small.atk-align-center .atk-swatch-green
     .atk-row
       .atk-col-4
-        .atk-swatch-yellow.atk-box-small.atk-text-center .atk-swatch-yellow
+        .atk-swatch-yellow.atk-box-small.atk-align-center .atk-swatch-yellow
       .atk-col-4
-        .atk-swatch-red.atk-box-small.atk-text-center .atk-swatch-red
+        .atk-swatch-red.atk-box-small.atk-align-center .atk-swatch-red
       .atk-col-4
-        .atk-swatch-gray.atk-box-small.atk-text-center .atk-swatch-gray
+        .atk-swatch-gray.atk-box-small.atk-align-center .atk-swatch-gray
   h3 Effects
   p
     span.atk-label.atk-effect-info .atk-effect-*
@@ -68,7 +68,7 @@ section#components
     .atk-box-small.atk-inline.atk-effect-info .atk-effect-info
   h3 Shapes
   #example-styling-shapes.atk-box.atk-inline
-    .atk-cells.atk-cells-gutter-large.atk-text-center
+    .atk-cells.atk-cells-gutter-large.atk-align-center
       .atk-cell
         p.atk-padding.atk-inline.atk-swatch-ink.atk-shape-rectangle
         div .atk-shape-rectangle
@@ -109,7 +109,7 @@ section#components
     span.atk-label.atk-effect-info .atk-box-large
     | .
   .atk-box.atk-inline
-    .atk-cells.atk-cells-gutter.atk-text-center
+    .atk-cells.atk-cells-gutter.atk-align-center
       .atk-cell
         .atk-box-small.atk-swatch-ink.atk-inline .atk-box-small
       .atk-cell
@@ -139,7 +139,7 @@ section#components
     span.atk-label.atk-effect-info .atk-cells-justified
     | .
   .atk-box
-    .atk-cells.atk-text-center
+    .atk-cells.atk-align-center
       .atk-cell.atk-padding-small.atk-swatch-gray
         | Cell #1
       .atk-cell.atk-padding-small.atk-swatch-white
@@ -449,11 +449,11 @@ section#components
   .atk-box.atk-inline
     .atk-cells.atk-cells-gutter
       .atk-cell
-        .atk-padding-small.atk-swatch-ink.atk-text-center.atk-inline .atk-padding-small
+        .atk-padding-small.atk-swatch-ink.atk-align-center.atk-inline .atk-padding-small
       .atk-cell
-        .atk-padding.atk-swatch-ink.atk-text-center.atk-inline .atk-padding
+        .atk-padding.atk-swatch-ink.atk-align-center.atk-inline .atk-padding
       .atk-cell
-        .atk-padding-large.atk-swatch-ink.atk-text-center.atk-inline .atk-padding-large
+        .atk-padding-large.atk-swatch-ink.atk-align-center.atk-inline .atk-padding-large
   h4 Pushes
   p
     span.atk-label.atk-effect-info .atk-push
@@ -467,13 +467,13 @@ section#components
     | .
   .atk-box.atk-inline
     .atk-cells.atk-cells-gutter
-      .atk-cell.atk-valign-top.atk-text-center
+      .atk-cell.atk-valign-top.atk-align-center
         .atk-padding-small.atk-swatch-ink.atk-push-small.atk-inline .atk-push-small
         .atk-padding-small.atk-swatch-yellow
-      .atk-cell.atk-valign-top.atk-text-center
+      .atk-cell.atk-valign-top.atk-align-center
         .atk-padding-small.atk-swatch-ink.atk-push.atk-inline .atk-push
         .atk-padding-small.atk-swatch-yellow
-      .atk-cell.atk-valign-top.atk-text-center
+      .atk-cell.atk-valign-top.atk-align-center
         .atk-padding-small.atk-swatch-ink.atk-push-large.atk-inline .atk-push-large
         .atk-padding-small.atk-swatch-yellow
   h3 Icons
@@ -3226,7 +3226,7 @@ section#components
             span.i-name block
             span.i-code 0xe963
       // /Fonts Icons
-      a#toggler.atk-size-mega.atk-text-center(href='javascript:void(0)')
+      a#toggler.atk-size-mega.atk-align-center(href='javascript:void(0)')
         span.icon-heart.atk-size-exa
         span.icon-flight.atk-size-exa
         span.icon-bug.atk-size-exa
