--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -93,28 +93,28 @@ section#widgets
               input(type='checkbox')
             td.atk-text-nowrap Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Zebra
   p
@@ -138,28 +138,28 @@ section#widgets
               input(type='checkbox')
             td.atk-text-nowrap Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Bordered
   p
@@ -183,28 +183,28 @@ section#widgets
               input(type='checkbox')
             td.atk-text-nowrap Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Bordered
   p
@@ -228,28 +228,28 @@ section#widgets
               input(type='checkbox')
             td.atk-text-nowrap Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: With Expander
   p
@@ -271,7 +271,7 @@ section#widgets
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
             td.atk-padding(colspan='3')
@@ -299,7 +299,7 @@ section#widgets
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
             td.atk-padding(colspan='3')
@@ -327,7 +327,7 @@ section#widgets
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
             td.atk-padding(colspan='3')
@@ -355,7 +355,7 @@ section#widgets
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
             td.atk-padding(colspan='3')
@@ -420,30 +420,30 @@ section#widgets
               input(type='checkbox')
             td.atk-text-nowrap Brian O'Connell
             td.atk-jackscrew.atk-text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Danny Brown
             td.atk-jackscrew.atk-text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap John Smith
             td.atk-jackscrew.atk-text-dimmed Sed varius nulla sodales hendrerit eleifend.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.atk-text-nowrap Satya Nadella
             td.atk-jackscrew.atk-text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
-            td.atk-text-center
+            td.atk-align-center
               a(href='javascript:void(0)') Edit
-      .atk-box-small.atk-actions.atk-text-center
+      .atk-box-small.atk-actions.atk-align-center
         a(href='javascript:void(0)') « Prev
         a(href='javascript:void(0)') 1
         a(href='javascript:void(0)') 2
@@ -469,7 +469,7 @@ section#widgets
       table
         tbody
           tr
-            td.atk-padding-large.atk-text-center
+            td.atk-padding-large.atk-align-center
               span.atk-label.atk-effect-warning
                 span.icon-attention
                 | &nbsp;No results found.
@@ -582,33 +582,33 @@ section#widgets
     .atk-push.atk-row
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-top-left.atk-box.atk-text-center.atk-size-kilo
+          .atk-popover.atk-popover-top-left.atk-box.atk-align-center.atk-size-kilo
             | .atk-popover-top-left
             .atk-popover-arrow
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-top-center.atk-box.atk-text-center.atk-size-kilo.atk-swatch-blue
+          .atk-popover.atk-popover-top-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-blue
             | .atk-popover-top-center
             .atk-popover-arrow
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-top-right.atk-box.atk-text-center.atk-size-kilo.atk-swatch-ink
+          .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-ink
             | .atk-popover-top-right
             .atk-popover-arrow
     .atk-row.atk-pushv
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-bottom-left.atk-box.atk-text-center.atk-size-kilo.atk-swatch-yellow
+          .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-kilo.atk-swatch-yellow
             | .atk-popover-bottom-left
             .atk-popover-arrow
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-bottom-center.atk-box.atk-text-center.atk-size-kilo.atk-swatch-red
+          .atk-popover.atk-popover-bottom-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-red
             | .atk-popover-bottom-center
             .atk-popover-arrow
       .atk-col-4
         .atk-box
-          .atk-popover.atk-popover-bottom-right.atk-box.atk-text-center.atk-size-kilo.atk-swatch-green
+          .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-green
             | .atk-popover-bottom-right
             .atk-popover-arrow
 
@@ -619,10 +619,10 @@ section#widgets
     button.atk-button#banner-loader-start Show Loader
     button.atk-button#banner-notification-start Show Notification
   .atk-banner.atk-cells#banner-loader
-    .atk-cell.atk-text-center.atk-valign-middle
+    .atk-cell.atk-align-center.atk-valign-middle
       .atk-box.atk-inline.atk-size-zetta.atk-banner-cogs
   .atk-banner.atk-cells#banner-notification
-    .atk-cell.atk-text-center.atk-valign-middle
+    .atk-cell.atk-align-center.atk-valign-middle
       .atk-box.atk-inline(style="width:180px")
         .icon-mail-alt.atk-size-yotta.atk-push-small.atk-text-baseline-reset
         .atk-text-bold.atk-text-lead Verification link sent to your email
