--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -615,17 +615,17 @@ ul[class*=atk-menu] {
 .buttonDefault() {
     .box-shadow(0 1px 0 rgba(0,0,0,0.07));
     background: @buttonDefault;
-    border: 0.1em solid @borderClickable;
+    border: 1px solid @borderClickable;
     color: @bodyColor;
 }
 .buttonHover() {
     background: @buttonHover;
-    border: 0.1em solid @borderClickable;
+    border: 1px solid @borderClickable;
     color: @bodyColor;
 }
 .buttonActive() {
     background: @buttonActive;
-    border: 0.1em solid @borderClickable;
+    border: 1px solid @borderClickable;
     color: @bodyColor;
 }
 .atk-disabled {
