--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -143,8 +143,11 @@ label.atk-input-label {
     .ui-selectmenu-button,
     .atk-input-icon {
         display: block;
-        width: 100% !important;
+        width: 100%;
     }
+}
+.atk-form .ui-selectmenu-button {
+    width: 100% !important;
 }
 // .atk-form {
 //     form {
