--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -605,7 +605,8 @@ ul[class*=atk-menu] {
         input[type="datetime"],
         input[type="datetime-local"],
         input[type="tel"],
-        textarea {
+        textarea,
+        .ui-selectmenu-button  {
             border-color: @effectDanger;
         }
     }
