--- a/playground/css/theme-hybrid.css
+++ b/playground/css/theme-hybrid.css
@@ -6107,7 +6107,8 @@ img.atk-shape-circle {
 *[class*=atk-effect].atk-effect-danger input[type="datetime"],
 *[class*=atk-effect].atk-effect-danger input[type="datetime-local"],
 *[class*=atk-effect].atk-effect-danger input[type="tel"],
-*[class*=atk-effect].atk-effect-danger textarea {
+*[class*=atk-effect].atk-effect-danger textarea,
+*[class*=atk-effect].atk-effect-danger .ui-selectmenu-button {
   border-color: #ff2d1a;
 }
 .atk-disabled {
