--- a/framework/css/theme.less
+++ b/framework/css/theme.less
@@ -4,7 +4,7 @@
  *  Theme: Default
  */
 
-@import '/less/agiletoolkit.less';
+@import '../less/agiletoolkit.less';
 
 
 // ==========================================================
@@ -45,7 +45,7 @@
 // Styles & Colors
 // ==========================================================
 
-@bodyBackground:       @atk-swatch-gray;
+@bodyBackground:       #fff;
 
 @cornerRadius:         5px;
 
@@ -103,5 +103,3 @@
 // ==========================================================
 // Your Code Goes Here
 // ==========================================================
-
-@import 'playground.less';
