--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -70,5 +70,6 @@
 @formMandatory:        #ff0000;
 
 @inputFocus:           @atk-swatch-blue;
+@inputPlaceholder:     lighten(@bodyColor, 60%);
 
 @popoverArrow:        12px;
