--- a/framework/css/theme.less
+++ b/framework/css/theme.less
@@ -4,7 +4,7 @@
  *  Theme: Default
  */
 
-@import '../less/agiletoolkit.less';
+// @import '../less/agiletoolkit.less';
 
 
 // ==========================================================
