--- a/playground/includes/playground-gridsystem.jade
+++ b/playground/includes/playground-gridsystem.jade
@@ -4,7 +4,10 @@ section#grid-system
     | Our responsive grid system.
   .atk-row.atk-push-small
     .atk-col-3
-      .atk-box-small .atk-col-3
+      .atk-box-small 
+        | .atk-col-3
+        br
+        | test
     .atk-col-3
       .atk-box-small .atk-col-3
     .atk-col-3
