Added 'map-browser' to examples.

--- a/playground/examples.jade
+++ b/playground/examples.jade
@@ -19,5 +19,7 @@ html(class='no-js')
                   ul
                     li
                       a(href='examples/form-login.html') Login Form
+                    li
+                      a(href='examples/map-browser.html') Map Browser
     include includes/scripts
     include includes/analytics
