Removed footer from index.

--- a/playground/index.jade
+++ b/playground/index.jade
@@ -22,6 +22,6 @@ html(class='no-js')
               include includes/playground-widgets
               include includes/playground-responsive
               include includes/playground-jqueryui
-      include includes/footer
+      //- include includes/footer
     include includes/scripts
     include includes/analytics
