--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -107,7 +107,9 @@ h6, small, .atk-size-milli {
     .clear-font;
 }
 .atk-text-baseline-reset {
-    line-height: 1;
+    &, a&[class*='atk-button'], button&[class*='atk-button'], input&[class*='atk-button'], a&.ui-button, button&.ui-button, input&.ui-button {
+        line-height: 1;
+    }
 }
 .atk-text-ellipsis {
     display: inline-block;
@@ -115,7 +117,9 @@ h6, small, .atk-size-milli {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
+.atk-text-inherit {
+    color: inherit;
+}
 
 // ==========================================================
 // Images
@@ -212,10 +216,10 @@ hr {
     background: none;
     border: none;
     border-top: 1px solid @borderStatic;
+    clear: both;
+    height: 0;
     margin: @margin 0;
     width: 100%;
-    height: 1px;
-    clear: both;
     &.atk-hr-small {
         margin: round(@margin/2,2) 0;
     }
